--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<!-- Note that this is duplicated into 404.html since that can't use Jekyll -->
 <div class="navigation-section">
   <img src="/images/reinteract-logo.png" alt="Reinteract Logo"/>
   <div class="navigation-header">
